Fix NotFound overflow

--- a/src/components/view/NotFoundPage/NotFoundPage.module.scss
+++ b/src/components/view/NotFoundPage/NotFoundPage.module.scss
@@ -4,6 +4,11 @@
 .root {
   width: 100%;
   height: 100%;
+  padding-top: 5rem;
+
+  @include mobile-small {
+    padding-top: 3rem;
+  }
 
   &.light {
     & .container {
@@ -20,7 +25,7 @@
 
 .container {
   max-width: 40%;
-  margin: 5rem auto;
+  margin: 0 auto;
   background-color: $light;
   transition: all 0.3s;
   padding: 2rem 2rem 3rem 2rem;
@@ -38,7 +43,7 @@
   }
 
   @include mobile-small {
-    height: 80%;
+    height: 90%;
   }
 
   & .textContainer {
